--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
-    <main></main>
+    <header>Esto es una prueba para GitHub</header>
+    <main>Quiero probar si se actualiza</main>
     <footer></footer>
     <script src="index.js" type="module"></script>
   </body>
