--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>Esto es una prueba para GitHub</header>
     <main>Quiero probar si se actualiza</main>
-    <footer></footer>
+    <footer>contacto 324588588</footer>
     <script src="index.js" type="module"></script>
   </body>
 </html>
