Pasando maskify a validator

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,14 @@
   </head>
   <body>
     <header>Esto es una prueba para GitHub</header>
-    <main>Quiero probar si se actualiza</main>
+
+    <main>
+      <input type="password" id="creditCardNumber" maxlength="16" onchange="maskify()"
+     <br>
+     <button type="button" id='boton-validar'>Validar</button>
+
+
+    </main>
     <footer>contacto 324588588</footer>
     <script src="index.js" type="module"></script>
   </body>
