Puse cada código en el archivo correspondiente, pero aún no funciona

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Tarjeta de crédito válida</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -9,7 +10,7 @@
     <header>Esto es una prueba para GitHub</header>
 
     <main>
-      <input type="password" id="creditCardNumber" maxlength="16" onchange="maskify()"
+      <input type="password" id="pass" maxlength="16" onchange="validator.maskify()"
      <br>
      <button type="button" id='boton-validar'>Validar</button>
 
