--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <header>Esto es una prueba para GitHub</header>
-
+    
     <main>
-      <input type="password" id="pass" maxlength="16" onchange="validator.maskify()"
-     <br>
-     <button type="button" id='boton-validar'>Validar</button>
+      <input type="password" id="pass" maxlength="16">
+      <br>
+      <button type="button" id='boton-validar'>Validar</button>
 
 
     </main>
