--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <header>Esto es una prueba para GitHub</header>
     
     <main>
-      <input type="password" id="pass" maxlength="16">
+      <input type="password" id="pass" maxlength="16" required>
       <br>
       <button type="button" id='boton-validar'>Validar</button>
 
