Campo requerido funcional

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
     <main>
       <input type="password" id="pass" maxlength="16">
       <br>
+      <span id="advertencia"></span>
+      <br>
       <button type="button" id='boton-validar'>Validar</button>
 
 
