barra de navegación

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Tarjeta de crédito válida</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>vitani</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
   </head>
-  <body>
-    <header>Esto es una prueba para GitHub</header>
+
+<body>
+
+    <header class="header">
+      <nav class="nav">
+       <!--<a href= "#" class= "logo nav-link">logo</a> -->
+        <img src="logo.png" alt="">
+        <ul class="nav-menu">
+          <li class= "nav-menu-item">
+            <a href="#" class= "nav-menu-link nav-link">Nosotros</a>
+          </li>
+          <li class= "nav-menu-item">
+            <a href="#" class= "nav-menu-link nav-link">Productos</a>
+          </li>
+          <li class="nav-menu-item">
+          <input type="text" class="search_text nav-link" placeholder="Buscar">
+          <a herf="" class="boton nav-link"></a>
+          <i class="icon-buscar nav-link"></i></li>
+          <li class="nav-menu-item nav-link">
+          <button type="button" onclick="alert('¡Muy pronto tendremos envíos disponibles!')">Envíos</button></li>
+        </ul>
+    </nav>
+    
+    </header>
     
     <main>
       <input type="password" id="pass" maxlength="16">
