creacion de clases y footer

--- a/src/index.html
+++ b/src/index.html
@@ -33,17 +33,19 @@
     </nav>
     
     </header>
-    
-    <main>
+    <main class="pagina-home">></main>
+    <main class= "pagina-productos"></main>
+    <main class= "pagina-compra"></main>
+    <main class= "pagina-validacion">
       <input type="password" id="pass" maxlength="16">
       <br>
       <span id="advertencia"></span>
       <br>
       <button type="button" id='boton-validar'>Validar</button>
-
-
     </main>
-    <footer>contacto 324588588</footer>
+    <main class= "pagina-validar"></main>
+    <main class= "pagina-no-valida"></main>
+    <footer class="pie-pagina"><span class="texto-footer"> © Copyright 2021 VITANI</span></footer>
     <script src="index.js" type="module"></script>
   </body>
 </html>
