Reorganización del js y correción de problemas ESLINT

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
         </div>
         <br>
         <br>
-        <button type="button" class="boton" id='boton-validar'>Validar</button>
+        <button type="button" class="boton" id="boton-validar">Validar</button>
       </section>
     </section>
     <section id= "pagina-valida">
@@ -90,7 +90,7 @@
           <br>
           <h1 class="row-3">¡Puedes seguir disfrutando de nuestros servicios!</h1>
           <br>
-          <button type="button" class="boton" id='boton-seguir'>Seguir comprando</button>
+          <button type="button" class="boton" id="boton-seguir">Seguir comprando</button>
         </div>
       </section>
     </section>
@@ -103,7 +103,7 @@
           <br>
           <h1 class="row-3">¡Por favor ingresa otra tarjeta!</h1>
           <br>
-          <button type="button" class="boton" id='boton-volver'>Tengo otra tarjeta</button>
+          <button type="button" class="boton" id="boton-volver">Tengo otra tarjeta</button>
         </div>
       </section>
     </section>
