pagina productos y compra

--- a/src/index.html
+++ b/src/index.html
@@ -57,12 +57,60 @@
       <img id="perro-raza" class ="fotos"
       src="perro-raza.jpg">
     </section>
+    <!--PAGINA PRODUCTOS-->
     <section id= "pagina-productos">
-      <button type="button" class="boton" id="boton-detalles">Compra</button>
+      <h2 id="cuatro-productos">productos</h2>
+        <div class="container">
+        <div class="Imagen">
+            <img src="productos/juego-persecución.png" alt="" class="imagenes">
+            <div class="Texto">
+                <h3>Juego de Persecución<br>Gatos</h3>
+                <p>$60.000</p>
+            </div>
+          </div> 
+          <div class="Imagen">
+            <img src="productos/arenera.png" alt="" class="imagenes">
+            <div class="Texto">
+                <h3>Arenera Cápsula<br>Gatos</h3>
+                <p>$100.000</p>
+            </div>
+          </div> 
+          <div class="Imagen">
+            <img src="productos/Collar.png" alt="" class="imagenes">
+            <div class="Texto">
+                <h3>Accesorio Collar<br>Gatos/Perros</h3>
+                <p>$25.000</p>
+            </div>
+          </div> 
+          <div class="Imagen">
+            <img src="productos/cama.png" alt="" class="imagenes">
+            <div class="Texto">
+                <h3>Cama Textura Suave<br>Gatos/Perros</h3>
+                <p>$110.000</p>
+            </div>
+          </div> 
+        </div>  
+      <button type="button" class="boton" id="boton-falso1">Comprar</button>
+      <button type="button" class="boton" id="boton-falso2">Comprar</button>
+      <button type="button" class="boton" id="boton-detalles">Comprar</button>
+      <button type="button" class="boton" id="boton-falso3">Comprar</button>
     </section>
+    <!--*****************PAGINA DE COMPRA******************-->
     <section id= "pagina-compra">
-      <button type="button" class="boton" id="boton-compra">Compra</button>
+     <div class="container-collar">
+       <img  class="imagen-collar-compra" src="COLLAR.jpg" alt="">
+       <p>  
+        <div class="texto-collar">
+            <h1>Accesorio Collar<br>Gatos/Perros</h1>
+             <div class="precio-collar">
+               <p class="precio-numeros">$60.000</p>
+               <button type="button" class="boton" id="boton-compra">Comprar</button>
+             </div>
+        </div>
+       </p>
+     </div>
     </section>
+    <!--*******************************************************************-->
     <section id= "pagina-comprobacion">
       <section class="naranja">
         <img id="tarjetas"
