--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
       <h2 id="cuatro-productos">productos</h2>
         <div class="container">
         <div class="Imagen">
-            <img src="productos/juego-persecución.png" alt="" class="imagenes">
+            <img src="productos\juego-persecución.png" alt="" class="imagenes">
             <div class="Texto">
                 <h3>Juego de Persecución<br>Gatos</h3>
                 <p>$60.000</p>
